<resources>
    <string name="spinduration">200</string>
    <string name="map_key">AIzaSyC55r2ndpln9xRzy5XyXeK-7AG2ygTM390</string>
    <string name="app_name">Shipper</string>
    <string name="loading">Loading...</string>
    <string name="duration_animation">200</string>
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="success">Success</string>
    <string name="verifyalert">Verify</string>
    <string name="loginfailed">Login Failed</string>
    <string name="activationrequired">Activation Required</string>
    <string name="title_activity_deliveredjob">Delivered Screen</string>
    <string name="title_activity_maproute">Map Route</string>
    <string name="contactalert">How would you wish to contact your driver?</string>
    <string name="cancelorder">Are you sure that you want to cancel your order?</string>
    <string name="approveorder">Are you sure to approve your order?</string>
    <string name="disapproveorder">Are you sure to disapprove your order?</string>
    <string name="textalert">Text</string>
    <string name="call">Call</string>
    <string name="contact">Contact</string>
    <string name="contactdriver">Contact Driver</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="jobdetails">Job Detail</string>
    <string name="canceljob">Cancel Order</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypepassword">Retype Password</string>
    <string name="submit">Submit</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="invalidemailid">Please enter valid email id</string>
    <string name="title_activity_forgot">Forgot Password</string>
    <string name="backtosignin"> Back to Sign In</string>
    <string name="backtosetting">Back to Settings</string>
    <string name="forgotpasswordins">Enter your email address and \n we\'ll send you a link to reset \n your password</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="mobileno">Mobile No.</string>
    <string name="btnpassword">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="companyname">Company Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip code</string>
    <string name="officeno">Office No.</string>
    <string name="phone">Phone</string>
    <string name="taxid">Tax ID</string>
    <string name="agreetermsandcond">By Clicking you agree to the <font fgcolor="red">Terms &amp; Conditions</font> and <font fgcolor="red">Privacy Policy</font>.</string>
    <string name="title_activity_createpassword">Create new password</string>
    <string name="signout">Sign Out</string>
    <string name="cratenewpassword">Create a New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="passwordlength">Password should be more than 6 characters</string>
    <string name="newpasswordconfirm">New password and Confirm password did not match</string>
    <string name="title_activity_payment">Payment</string>
    <string name="addanewcard">Add New Card</string>
    <string name="addcar">ADD CARD</string>
    <string name="payment">Payment</string>
    <string name="scancard">Scan a Card</string>
    <string name="paypal">Paypal</string>
    <string name="entercarddetails">Enter Card Details</string>
    <string name="applyforcredit">Apply for Credit</string>
    <string name="or">OR</string>
    <string name="nameonthecard">Name on the card</string>
    <string name="cardnumber">Card Number</string>
    <string name="mmyy">MM/YYYY</string>
    <string name="cvv">CVV</string>
    <string name="expireson">Expires:</string>
    <string name="verify">Verify Mobile</string>
    <string name="resendalert">Activation code has been resent to your registerd mobile number via SMS. Use the code to verify your mobile number</string>
    <string name="enterverificationcode">Please enter your verification code</string>
    <string name="enterverificationscreen">that was sent to </string>
    <string name="number">number</string>
    <string name="errorverificationcode">Verification code should not be less than 4 digits</string>
    <string name="resend">Resend</string>
    <string name="changenumber">Change Number</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">Del</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Payment</item>
        <item>Shipment</item>
        <item>Settings</item>
        <item>About us</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>
    <string-array name="additional_services">
        <item>Border Crossing fee</item>
        <item>Hazmat charge</item>
        <item>No Of Straps</item>
        <item>Redelivery Charge</item>
        <item>Stops-in-transit</item>
        <item>Team Service</item>
    </string-array>
    <string name="title_trucker">Trucker</string>
    <string name="title_settings">Settings</string>
    <string name="title_aboutus">About</string>
    <string name="selectimage">Choose image</string>
    <string name="takefromcamera">Camera</string>
    <string name="takefromgallery">Gallery</string>
</resources>