<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.RequestStatus">

    <group android:id="@+id/group_contactdriver">
        <item
            android:id="@+id/contact_driver"
            android:title="@string/contactdriver" />
    </group>
    <group android:id="@+id/group_jobdetails">
        <item
            android:id="@+id/job_details"
            android:title="@string/jobdetails" />
    </group>
    <group android:id="@+id/group_cancel">
        <item
            android:id="@+id/cancel_job"
            android:title="@string/canceljob" />
    </group>
    <group android:id="@+id/group_canceljob">
        <item
            android:id="@+id/cancel"
            android:title="@string/cancel" />
    </group>

</menu>
