<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fitsSystemWindows="true"
    tools:context=".activity.VerifyMobileNumber">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/verify_mobile_number_tv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/backarrow" />

        <TextView
            android:id="@+id/verify_mobile_number_tv_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/verify_mobile_number_tv_verifysubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_8sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_ll"
        android:layout_below="@+id/headerLayout"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/verify_mobile_number_tv_verifytitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enterverificationcode"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_verifytitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterverificationscreen"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/verify_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_verifyone"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/tv_verifytwo"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/tv_verifythree"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/tv_verifyfour"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:background="@drawable/whitecircle" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/one"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/two"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />


                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/three"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/four"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/btn_five"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/five"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />


                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/six"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/seven"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/eight"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />


                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/nine"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/seven"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="invisible" />


                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/zero"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />


                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/del"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btnbackground"
            android:gravity="center"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btn_changenumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/redbtnbackground"
            android:gravity="center"
            android:text="@string/changenumber"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</RelativeLayout>
