<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.AddNewCard">

    <RelativeLayout
        android:id="@+id/addcard_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/addcard_tv_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/backarrow" />

        <TextView
            android:id="@+id/addcard_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/addanewcard"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addcard_rl"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addcard_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:hint="@string/nameonthecard"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/insertion"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/addcard_et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/cvvicon"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:hint="@string/cardnumber"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="16"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/insertion"
            android:textSize="@dimen/_14sdp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addcard_et_expirydate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/calendar_icon"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:hint="@string/mmyy"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/addcard_et_cvv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/cvvicon"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="4"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/insertion"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/addcard_btn_addtocard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnbackground"
        android:text="@string/addcar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

</RelativeLayout>
